@@ -7,10 +7,12 @@ milestones=Track the time you created your first science pack, or any other item
 [mod-setting-name]
 milestones_check_frequency=Ticks between each check [img=info]
 milestones_initial_preset=Initial preset [img=info]
+milestones_compact_list=Compact list [img=info]
 
 [mod-setting-description]
 milestones_check_frequency=The mod will wait this many ticks between each completion check. Lower this if you care about time precision, raise if you want less performance impact. If you set this to less than 60, the GUI will also show milliseconds.
 milestones_initial_preset=Initial preset loaded at the start of a map. Has no effect on existing games. Use Milestones' "export" feature in-game to get a string that you can paste here.
+milestones_compact_list=Removes the "Completed at" labels before each time.
 
 [shortcut-name]
 milestones_toggle_gui=Show milestones
